Created a starting model for demo with 6 records

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0-final"
+   "version": "3.9.1-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3.9.1 64-bit ('env')",
+   "metadata": {
+    "interpreter": {
+     "hash": "828bf61fd7dc916dbe30fa2205b98b041b31ddb2522ece5144780acd930a1f79"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -23,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,31 +54,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the starter dataset (expect to be less accurate)\n",
+    "bankdata = pd.read_csv(\"bank_data_light.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<bound method NDFrame.head of       Variance  Skewness  Curtosis  Entropy  Class\n",
-       "0      3.62160   8.66610   -2.8073 -0.44699      0\n",
-       "1      4.54590   8.16740   -2.4586 -1.46210      0\n",
-       "2      3.86600  -2.63830    1.9242  0.10645      0\n",
-       "3      3.45660   9.52280   -4.0112 -3.59440      0\n",
-       "4      0.32924  -4.45520    4.5718 -0.98880      0\n",
-       "...        ...       ...       ...      ...    ...\n",
-       "1367   0.40614   1.34920   -1.4501 -0.55949      1\n",
-       "1368  -1.38870  -4.87730    6.4774  0.34179      1\n",
-       "1369  -3.75030 -13.45860   17.5932 -2.77710      1\n",
-       "1370  -3.56370  -8.38270   12.3930 -1.28230      1\n",
-       "1371  -2.54190  -0.65804    2.6842  1.19520      1\n",
-       "\n",
-       "[1372 rows x 5 columns]>"
+       "<bound method NDFrame.head of    variance  skewness  curtosis  entropy  class\n",
+       "0    3.6216   8.66610   -2.8073 -0.44699      0\n",
+       "1    4.5459   8.16740   -2.4586 -1.46210      0\n",
+       "2    3.8660  -2.63830    1.9242  0.10645      0\n",
+       "3    1.4378   0.66837   -2.0267  1.02710      1\n",
+       "4    2.1943   4.55030   -4.9760 -2.72540      1\n",
+       "5    0.7376   4.85250   -4.7986 -5.66590      1>"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 8
     }
    ],
    "source": [
@@ -84,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data preprocessing\n",
-    "X = bankdata.drop('Class', axis=1)  # X = features\n",
-    "y = bankdata['Class']               # y = target (label)\n",
+    "X = bankdata.drop('class', axis=1)  # X = features\n",
+    "y = bankdata['class']               # y = target (label)\n",
     "\n",
     "# divide into training and testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20)"
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +117,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 10
     }
    ],
    "source": [
@@ -120,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1 1 1 1 0 0 0 1 0 1 0 0 1 0 1 1 0 1 0 1 0 1 1 0 0 0 1 1 0 0 1 1 0 1 0 1 0\n 0 0 0 1 0 0 0 0 0 1 1 0 0 0 0 1 0 1 0 1 1 0 1 0 0 0 1 1 1 0 0 1 1 0 1 0 0\n 1 1 0 1 1 0 0 0 1 1 1 0 0 0 0 1 1 1 0 0 0 1 0 1 1 0 1 1 0 0 0 0 1 1 1 0 0\n 0 1 1 0 0 1 1 0 0 0 0 1 0 1 1 0 0 1 0 1 0 1 0 1 0 1 1 0 0 0 1 1 1 0 0 0 0\n 1 0 0 1 1 1 1 0 1 1 1 1 1 0 0 0 0 0 0 1 1 1 1 0 0 0 1 1 0 0 0 1 0 1 0 1 0\n 1 1 0 0 1 0 0 0 1 1 0 0 1 0 1 1 0 0 0 0 1 1 1 0 1 1 1 0 0 1 1 0 1 1 0 0 0\n 1 1 1 0 0 0 0 0 1 0 0 1 1 1 1 0 1 0 1 0 0 1 1 0 0 0 1 0 1 0 1 1 1 1 1 0 0\n 0 0 1 0 0 0 0 0 0 1 0 1 0 0 1 0]\n"
+      "[1 0]\n"
      ]
     }
    ],
@@ -139,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[148   4]\n [  0 123]]\n              precision    recall  f1-score   support\n\n           0       1.00      0.97      0.99       152\n           1       0.97      1.00      0.98       123\n\n    accuracy                           0.99       275\n   macro avg       0.98      0.99      0.99       275\nweighted avg       0.99      0.99      0.99       275\n\n"
+      "[[1 0]\n [0 1]]\n              precision    recall  f1-score   support\n\n           0       1.00      1.00      1.00         1\n           1       1.00      1.00      1.00         1\n\n    accuracy                           1.00         2\n   macro avg       1.00      1.00      1.00         2\nweighted avg       1.00      1.00      1.00         2\n\n"
      ]
     }
    ],
@@ -158,18 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['mike-test1.joblib']"
+       "['model.joblib']"
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 13
     }
    ],
    "source": [
@@ -180,7 +188,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['model_light.joblib']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "# Persist the model\n",
+    "from joblib import dump, load\n",
+    "dump(svclassifier, 'model_light.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1 1 1 1 0 0 0 1 0 1 0 0 1 0 1 1 0 1 0 1 0 1 1 0 0 0 1 1 0 0 1 1 0 1 0 1 0\n 0 0 0 1 0 0 0 0 0 1 1 0 0 0 0 1 0 1 0 1 1 0 1 0 0 0 1 1 1 0 0 1 1 0 1 0 0\n 1 1 0 1 1 0 0 0 1 1 1 0 0 0 0 1 1 1 0 0 0 1 0 1 1 0 1 1 0 0 0 0 1 1 1 0 0\n 0 1 1 0 0 1 1 0 0 0 0 1 0 1 1 0 0 1 0 1 0 1 0 1 0 1 1 0 0 0 1 1 1 0 0 0 0\n 1 0 0 1 1 1 1 0 1 1 1 1 1 0 0 0 0 0 0 1 1 1 1 0 0 0 1 1 0 0 0 1 0 1 0 1 0\n 1 1 0 0 1 0 0 0 1 1 0 0 1 0 1 1 0 0 0 0 1 1 1 0 1 1 1 0 0 1 1 0 1 1 0 0 0\n 1 1 1 0 0 0 0 0 1 0 0 1 1 1 1 0 1 0 1 0 0 1 1 0 0 0 1 0 1 0 1 1 1 1 1 0 0\n 0 0 1 0 0 0 0 0 0 1 0 1 0 0 1 0]\n0.9854545454545455\n"
+      "[1 0]\n1.0\n"
      ]
     }
    ],
@@ -211,14 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "      Variance  Skewness  Curtosis  Entropy\n1134   -1.7063   2.79560  -2.37800 -2.34910\n1195   -1.9725   2.88250  -2.30860 -2.37240\n928    -6.1536   7.92950   0.61663 -3.26460\n837    -6.2815   6.66510   0.52581 -7.01070\n70      3.9529  -2.35480   2.37920  0.48274\n...        ...       ...       ...      ...\n1280   -3.3553   0.35591   2.64730 -0.37846\n678     2.4673   1.39260   1.71250  0.41421\n2       3.8660  -2.63830   1.92420  0.10645\n1314   -3.5060 -12.56670  15.16060 -0.75216\n333     3.0009   5.81260  -2.23060 -0.66553\n\n[275 rows x 4 columns]\n"
+      "   variance  skewness  curtosis  entropy\n4    2.1943    4.5503   -4.9760  -2.7254\n1    4.5459    8.1674   -2.4586  -1.4621\n"
      ]
     }
    ],
@@ -228,18 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   Variance  Skewness  Curtosis  Entropy\n0  -0.60975    -4.002    1.8471   0.6017\n\nResult 1                 : ['real']\nResult 2                 : ['real']\nPrediction 1 took        : 0.007296000000000191\nPrediction 2 took        : 0.001972000000000307\n"
+      "   Variance  Skewness  Curtosis  Entropy\n0  -0.60975    -4.002    1.8471   0.6017\n\nResult 1                 : ['real']\nResult 2                 : ['real']\nPrediction 1 took        : 0.005993000000000137\nPrediction 2 took        : 0.002146999999999899\n"
      ]
     }
    ],
    "source": [
+    "# compare processing times using Pandas or Numpy\n",
     "predict_start = time.process_time()\n",
     "new_classifier = load('model.joblib')\n",
     "customer = {'Variance': [-0.60975], 'Skewness': [-4.00200], 'Curtosis': [1.847100], 'Entropy': [0.60170]}\n",
